<resources>
    <string name="app_name">7 Minute Workout</string>
    <string name="image">start image</string>
    <string name="start">START</string>
    <string name="get_ready_for">Get Ready For</string>
    <string name="_10">10</string>
    <string name="_30">30</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="name_exercise">Exercise Name</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
</resources>