<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercise"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:theme="@style/ToolbarTheme"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#D4DEE7"
        app:titleTextColor="@color/black"
        />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_for"
        android:textSize="22sp"
        android:textColor="#0033aa"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/flRestView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <FrameLayout
        android:id="@+id/flRestView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleHorizontal"
            android:background="@drawable/circular_progress_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:max="10"
            android:progress="100"
            android:rotation="-90"
            />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="25sp"

                />


        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tvUpcomingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_exercise"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flRestView"
        app:layout_constraintBottom_toTopOf="@+id/tvUpcomingExerciseName"
        tools:visibility="visible"

        />

    <TextView
        android:id="@+id/tvUpcomingExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpcomingLabel"
        tools:visibility="visible"

        />


    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/jumping_jacks_exercise"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/tvExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/toolbarExercise"/>
    <TextView
        android:id="@+id/tvExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_exercise"
        android:textColor="@color/uablue"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImage"
        tools:visibility="visible"

        />

    <FrameLayout
        android:id="@+id/flExerciseView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExerciseName">

        <ProgressBar
            android:id="@+id/progressBarExercise"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleHorizontal"
            android:background="@drawable/circular_progress_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:max="30"
            android:progress="300"
            android:rotation="-90"
            />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tvTimerExercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="25sp"

                />


        </LinearLayout>

    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>